--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -23,6 +23,11 @@
 			<artifactId>ejb-api</artifactId>
 			<version>3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>1.0.2</version>
+		</dependency>
         <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jboss-ejb-client</artifactId>
@@ -34,13 +39,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 	   </dependency>
-	   <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>1.2.7.RELEASE</version>
-        </dependency>
-	   
-		       
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+        </dependency>	 
     </dependencies>
 
     <build>
