--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -19,17 +19,21 @@
     
     <dependencies>
         <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
-                <version>2.5</version>
-        </dependency>
-            <!-- core library -->
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>2.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			 <artifactId>resteasy-jaxrs</artifactId>
 			<version>2.3.1.GA</version>
 			<scope>provided</scope>
 		</dependency>
+				<dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.5</version>
+        </dependency>
 	    <dependency>
 			<groupId>br.com.finatofinato</groupId>
 			<artifactId>ejb</artifactId>
@@ -37,7 +41,6 @@
 			<scope>provided</scope>
 			<version>0.0.1-SNAPSHOT</version>
 	    </dependency>
-
     </dependencies>
 
     <build>
