--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
 	<display-name>MyApp</display-name>
-<!-- 
-	<servlet>
-	   <servlet-name>Resteasy</servlet-name>
-	     <servlet-class>
-	       org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
-	     </servlet-class>
-	     <init-param>
-	       <param-name>javax.ws.rs.Application</param-name> 
-	       <param-value>br.com.finatofinato.rest.NewSessionRESTWS</param-value>
-	    </init-param>
-	 </servlet>  
- -->
+
 	<servlet>
          <servlet-name>RestApp</servlet-name>
 	     <servlet-class>
@@ -23,7 +12,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
 	     </servlet-class>
 	     <init-param>
 	       <param-name>javax.ws.rs.Application</param-name> 
-	       <param-value>br.com.finatofinato.rest.AppRESTWSRoot</param-value>
+	       <param-value>br.com.finatofinato.rest.api.AppRESTWSRoot</param-value>
 	    </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -31,17 +20,34 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
         <servlet-name>RestApp</servlet-name>
         <url-pattern>/restapp/*</url-pattern>
     </servlet-mapping>
+    
     <context-param>
 		<param-name>resteasy.servlet.mapping.prefix</param-name>
 		<param-value>/restapp</param-value>
 	</context-param>
+	
 	<context-param>
 		<param-name>resteasy.resources</param-name>
 		<param-value>
-			br.com.finatofinato.rest.RestauranteRESTRoutes,
-			br.com.finatofinato.rest.VotacaoRESTRoutes,
-			br.com.finatofinato.rest.NewSessionRESTWS2
+			br.com.finatofinato.rest.api.RestauranteRESTRoutes,
+			br.com.finatofinato.rest.api.VotacaoRESTRoutes,
+			br.com.finatofinato.rest.api.TesteRESTWS
 		</param-value>
 	</context-param>
-
+	
+	<filter>
+		<filter-name>CORS</filter-name>
+		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+		
+		<init-param>
+                <param-name>cors.allowOrigin</param-name>
+                <param-value>*</param-value>
+        </init-param>
+	</filter>
+	
+	<filter-mapping>
+        <filter-name>CORS</filter-name>
+        <url-pattern>/restapp/*</url-pattern>
+	</filter-mapping>
+	
 </web-app>
