--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -18,6 +18,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<scope>provided</scope>
+			<version>1</version>
+		</dependency>
 	    <dependency>
 			<groupId>javax.ejb</groupId>
 			<artifactId>ejb-api</artifactId>
